{
    "name": "WalkModeInputAction",
    "maps": [
        {
            "name": "Walk",
            "id": "2bbfecfc-3200-484c-ba30-66ab56a34405",
            "actions": [
                {
                    "name": "Run Action",
                    "type": "Button",
                    "id": "295df617-3b28-486f-b717-7afa287e75f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump Action",
                    "type": "Button",
                    "id": "007fa4dd-2633-4922-9a1e-7c3be5979118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Walk Navigation Action",
                    "type": "PassThrough",
                    "id": "0727beb6-44e2-4bda-a948-4ebf2a10dbaf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera Rotate Action",
                    "type": "Value",
                    "id": "5426bf18-facd-48f7-9f69-0bda921e2df5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Teleport Click Action",
                    "type": "Button",
                    "id": "b1fc863b-a1df-4698-ac2b-7f950cd37ee2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a7881f4-a532-46b5-8588-a8f2c7248143",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d365e887-4efc-425d-9dc3-498513b47f4e",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Vector 2",
                    "id": "83bc6115-7976-4413-9d47-f925bba6ab2d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "2675f323-e028-42a8-8495-2caa2f840d57",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "33b6029e-0323-4704-ac01-088ae4d17d49",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "ce4658b8-576c-4c2a-8639-2b0247024138",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "95cda807-37fc-42e6-8f4c-4f870958833b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "5a5fba74-78b3-4df5-81c3-8af2f2f8d092",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8858b988-5d87-4ffa-938e-b89411d7b78d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e59267bb-17de-419b-87e4-17bb437b3ce7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c4d2f692-0bdf-4bcf-ae1c-f817b4fd1ab8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ee4f6c8d-c718-47ea-ae2b-a5629ae57c3e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "355d17b5-ede1-41f3-adeb-9e166067688e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Navigation Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Mouse Drag",
                    "id": "ee6de91e-3090-42a4-9873-6c2761592640",
                    "path": "MouseDrag",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "c8157e07-2d8f-40a0-a4df-691d999f863b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis1",
                    "id": "bb89fc13-a2b1-47c0-954a-463a1ce380f9",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis2",
                    "id": "854025a9-b86c-438d-95f1-d79b6b7b3350",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse Drag",
                    "id": "7d6fd00c-5ac9-4487-b4fd-28ccac8e37c6",
                    "path": "MouseDrag",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "c8b7c00e-0a35-49fa-b9aa-596497dcf58d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis1",
                    "id": "915d0c05-dc6c-4ea2-b782-a5bc8c82c5cc",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis2",
                    "id": "fc24d4fe-b0dd-4fb0-8c77-c829b561ae20",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quick WorldOrbit Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse Drag",
                    "id": "258dcaef-abe6-4a29-90fe-3c2b0e5f262c",
                    "path": "MouseDrag",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Camera Rotate Action",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "m_Button",
                    "id": "3dce811b-e528-4a0c-ab88-ea9c4c7726d7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotate Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "m_Axis1",
                    "id": "13eeeba3-8c07-4b13-83dc-fe4af28d704e",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotate Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "m_Axis2",
                    "id": "d1363c7f-44fa-48f4-9fdd-c1205cd5cfc2",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotate Action",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90ace430-b09b-4882-8595-fcf9559e4ef8",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Camera Rotate Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4adb86bc-9636-4d66-9416-bced43535027",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap(tapDelay=0.3)",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport Click Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ed996cc-0d2a-46fe-b3ae-de0ddd7c3011",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport Click Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}